--- a/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
+++ b/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
@@ -11,8 +11,35 @@
     <header>
         <img src="../../Pictures/NavBar/NYP-logo.png" class="logo">
     </header>
+    <img src="../../Pictures/MainPage/badmintonBanner.png" class="banner">
     <main>
-        
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
     </main>
+    <footer>
+        <table>
+            <div>
+                Contact us
+            </div>
+            <tr><td><a href="https://www.nyp.edu.sg/">Nanyang Polytechnic</a></td></tr>
+                <td><a href="https://www.nyp.edu.sg/contact-us.html">Contact Us</a></td>
+                <td><a href="https://www.nyp.edu.sg/privacy-policy.html">Privacy Policy</a></td>
+                <td><a href="https://www.nyp.edu.sg/terms-of-use.html">Terms of Use</a></td>
+            </tr>
+        </table>
+    </footer>
 </body>
 </html>
