--- a/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
+++ b/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
@@ -10,9 +10,45 @@
 <body>
     <header>
         <img src="../../Pictures/NavBar/NYP-logo.png" class="logo">
+        <div>
+            <p class="a"> Events </p>
+            <p class="a"> Registration </p>
+            <p class="a"> Contact Us </p>
+            <p class="a"> About Us </p>
+        </div>
     </header>
-    <img src="../../Pictures/MainPage/badmintonBanner.png" class="banner">
+    <div>
+        <img src="../../Pictures/MainPage/badmintonBanner.png" class="banner">
+    </div>
     <main>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <br>
