--- a/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
+++ b/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
@@ -11,10 +11,10 @@
     <header>
         <img src="../../Pictures/NavBar/NYP-logo.png" class="logo">
         <div>
-            <p class="a"> Events </p>
-            <p class="a"> Registration </p>
-            <p class="a"> Contact Us </p>
-            <p class="a"> About Us </p>
+            <p class="a">Events</p>
+            <p class="a">Registration</p>
+            <p class="a">Contact Us</p>
+            <p class="a">About Us</p>
         </div>
     </header>
     <div>
@@ -65,14 +65,22 @@
         <br>
     </main>
     <footer>
+        <h1>
+            Contact us
+        </h1>
         <table>
-            <div>
-                Contact us
-            </div>
-            <tr><td><a href="https://www.nyp.edu.sg/">Nanyang Polytechnic</a></td></tr>
-                <td><a href="https://www.nyp.edu.sg/contact-us.html">Contact Us</a></td>
-                <td><a href="https://www.nyp.edu.sg/privacy-policy.html">Privacy Policy</a></td>
-                <td><a href="https://www.nyp.edu.sg/terms-of-use.html">Terms of Use</a></td>
+            <tr>
+                <img src="../../Pictures/Footer/blackFacebook.png" class="footerImg">
+                <img src="../../Pictures/Footer/blackInstagram.png" class="footerImg">
+                <td>info@nyp.edu.sg</td>
+            </tr>
+            <tr>
+                <td>Phone:</td>
+                <td>+65 1234 5678</td>
+            </tr>
+            <tr>
+                <td>Address:</td>
+                <td>600 Upper Changi Road East, Singapore 486150</td>
             </tr>
         </table>
     </footer>
