--- a/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
+++ b/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
@@ -69,10 +69,14 @@
             <div>
                 Contact us
             </div>
-            <tr><td><a href="https://www.nyp.edu.sg/">Nanyang Polytechnic</a></td></tr>
-                <td><a href="https://www.nyp.edu.sg/contact-us.html">Contact Us</a></td>
-                <td><a href="https://www.nyp.edu.sg/privacy-policy.html">Privacy Policy</a></td>
-                <td><a href="https://www.nyp.edu.sg/terms-of-use.html">Terms of Use</a></td>
+            <tr>
+                <td>
+                    <img src="../../Pictures/Footer/" class="footerImg">
+                    <p>+65 1234 5678</p>
+                </td>
+                <td>
+                    <img src="../../Pictures/Footer/email.png" class="footerImg">
+                    <p>
             </tr>
         </table>
     </footer>
