--- a/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
+++ b/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
@@ -70,17 +70,19 @@
         </h1>
         <table>
             <tr>
-                <img src="../../Pictures/Footer/blackFacebook.png" class="footerImg">
-                <img src="../../Pictures/Footer/blackInstagram.png" class="footerImg">
-                <td>info@nyp.edu.sg</td>
-            </tr>
-            <tr>
-                <td>Phone:</td>
-                <td>+65 1234 5678</td>
-            </tr>
-            <tr>
-                <td>Address:</td>
-                <td>600 Upper Changi Road East, Singapore 486150</td>
+                <td id="rowspan" rowspan="3">
+                    <img src="../../Pictures/Footer/blackFacebook.png" class="footerImg">
+                    <img src="../../Pictures/Footer/blackInstagram.png" class="footerImg">
+                    <img src="../../Pictures/Footer/blackTwitter.png" class="footerImg">
+                </td>
+                
+                    <td>Phone:</td>
+                    <td>+65 1234 5678</td>
+                </tr>
+                <tr>
+                    <td>Address:</td>
+                    <td>600 Upper Changi Road East, Singapore 486150</td>
+                </tr>
             </tr>
         </table>
     </footer>
