--- a/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
+++ b/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
@@ -22,7 +22,7 @@
     </header>
     
     <div>
-        <img src="../../Pictures/MainPage/badmintonBanner.png" class="banner" alt="Banner">
+        <img src="../../Pictures/MainPage/Mainbackground.png" class="banner" alt="Badminton CCA Banner">
     </div>
     
     <main>
@@ -90,25 +90,13 @@
                     <a href="https://twitter.com/nanyangpoly" class="text-white me-3" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-twitter fs-5 hover-red"></i>
                     </a>
-                    <!-- NYP Official YouTube -->
-                    <a href="https://www.youtube.com/user/NYPSG" class="text-white me-3" target="_blank" rel="noopener noreferrer">
-                        <i class="fab fa-youtube fs-5 hover-red"></i>
-                    </a>
-                    <!-- NYP Official LinkedIn -->
-                    <a href="https://www.linkedin.com/school/nanyang-polytechnic/" class="text-white" target="_blank" rel="noopener noreferrer">
-                        <i class="fab fa-linkedin-in fs-5 hover-red"></i>
-                    </a>
                 </div>
             </div>
         </div>
 
         <div class="row mt-4 pt-3 border-top border-secondary">
             <div class="col-12 text-center">
-                <p class="mb-2 text-white-50 small">© 2025 Nanyang Polytechnic. All Rights Reserved.</p>
-                <p class="mb-0 small">
-                    <a href="https://www.nyp.edu.sg/privacy-policy" class="text-decoration-none text-white-50 hover-white" target="_blank" rel="noopener noreferrer">Privacy Policy</a> | 
-                    <a href="https://www.nyp.edu.sg/terms-of-use" class="text-decoration-none text-white-50 hover-white" target="_blank" rel="noopener noreferrer">Terms of Use</a>
-                </p>
+                <p class="mb-0 text-white-50 small">© <script>document.write(new Date().getFullYear())</script> Nanyang Polytechnic. All Rights Reserved.</p>
             </div>
         </div>
     </div>
