--- a/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
+++ b/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
@@ -21,8 +21,14 @@
         </div>
     </header>
     
-    <div>
+    <div class="banner-container">
         <img src="../../Pictures/MainPage/Mainbackground.png" class="banner" alt="Badminton CCA Banner">
+        <div class="banner-overlay">
+            <h1>Welcome to NYP Badminton CCA</h1>
+            <a href="#registration" class="cta-button">
+            <span>Join Our Team</span>
+            <i class="fas fa-arrow-right"></i></a>
+        </div>
     </div>
     
     <main>
@@ -31,7 +37,6 @@
     <footer class="bg-dark text-white pt-4 pb-3">
     <div class="container">
         <div class="row">
-            <!-- Quick Links Column -->
             <div class="col-md-6 mb-4">
                 <h5 class="text-danger mb-3 border-bottom pb-2">Quick Links</h5>
                 <ul class="list-unstyled">
@@ -58,7 +63,6 @@
                 </ul>
             </div>
 
-            <!-- Contact Info Column -->
             <div class="col-md-6 mb-4">
                 <h5 class="text-danger mb-3 border-bottom pb-2">Contact Information</h5>
                 <ul class="list-unstyled">
@@ -78,15 +82,12 @@
 
                 <h5 class="text-danger mt-4 mb-3 border-bottom pb-2">Connect With Us</h5>
                 <div class="social-icons">
-                    <!-- NYP Official Facebook -->
                     <a href="https://www.facebook.com/nanyangpoly" class="text-white me-3" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-facebook-f fs-5 hover-red"></i>
                     </a>
-                    <!-- NYP Official Instagram -->
                     <a href="https://www.instagram.com/nanyangpoly/" class="text-white me-3" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-instagram fs-5 hover-red"></i>
                     </a>
-                    <!-- NYP Official Twitter -->
                     <a href="https://twitter.com/nanyangpoly" class="text-white me-3" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-twitter fs-5 hover-red"></i>
                     </a>
