--- a/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
+++ b/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="logo-link">
+        <a href="../mainPage/mainpage2.html" class="logo-link">
             <img src="../../Pictures/NavBar/NYP-logo.png" class="logo" alt="NYP Logo">
         </a>
         <div class="nav-menu">
@@ -26,8 +26,9 @@
         <div class="banner-overlay">
             <h1>Welcome to NYP Badminton CCA</h1>
             <a href="#registration" class="cta-button">
-            <span>Join Our Team</span>
-            <i class="fas fa-arrow-right"></i></a>
+                <span>Join Our Team</span>
+                <i class="fas fa-arrow-right"></i>
+            </a>
         </div>
     </div>
     
@@ -35,72 +36,72 @@
     </main>
     
     <footer class="bg-dark text-white pt-4 pb-3">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 mb-4">
-                <h5 class="text-danger mb-3 border-bottom pb-2">Quick Links</h5>
-                <ul class="list-unstyled">
-                    <li class="mb-2">
-                        <a href="#events" class="text-decoration-none text-white-50 hover-white">
-                            <i class="fas fa-calendar-alt me-2"></i> Events
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <h5 class="text-danger mb-3 border-bottom pb-2">Quick Links</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-2">
+                            <a href="#events" class="text-decoration-none text-white-50 hover-white">
+                                <i class="fas fa-calendar-alt me-2"></i> Events
+                            </a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#registration" class="text-decoration-none text-white-50 hover-white">
+                                <i class="fas fa-user-edit me-2"></i> Registration
+                            </a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#contact" class="text-decoration-none text-white-50 hover-white">
+                                <i class="fas fa-envelope me-2"></i> Contact Us
+                            </a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#about" class="text-decoration-none text-white-50 hover-white">
+                                <i class="fas fa-info-circle me-2"></i> About Us
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-md-6 mb-4">
+                    <h5 class="text-danger mb-3 border-bottom pb-2">Contact Information</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-3">
+                            <i class="fas fa-map-marker-alt text-danger me-2"></i>
+                            600 Upper Changi Road East, Singapore 486150
+                        </li>
+                        <li class="mb-3">
+                            <i class="fas fa-phone-alt text-danger me-2"></i>
+                            +65 1234 5678
+                        </li>
+                        <li class="mb-3">
+                            <i class="fas fa-envelope text-danger me-2"></i>
+                            <a href="mailto:contact@example.com" class="text-decoration-none text-white-50 hover-white">contact@example.com</a>
+                        </li>
+                    </ul>
+
+                    <h5 class="text-danger mt-4 mb-3 border-bottom pb-2">Connect With Us</h5>
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com/nanyangpoly" class="text-white me-3" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-facebook-f fs-5 hover-red"></i>
                         </a>
-                    </li>
-                    <li class="mb-2">
-                        <a href="#registration" class="text-decoration-none text-white-50 hover-white">
-                            <i class="fas fa-user-edit me-2"></i> Registration
+                        <a href="https://www.instagram.com/nanyangpoly/" class="text-white me-3" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-instagram fs-5 hover-red"></i>
                         </a>
-                    </li>
-                    <li class="mb-2">
-                        <a href="#contact" class="text-decoration-none text-white-50 hover-white">
-                            <i class="fas fa-envelope me-2"></i> Contact Us
+                        <a href="https://twitter.com/nanyangpoly" class="text-white me-3" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-twitter fs-5 hover-red"></i>
                         </a>
-                    </li>
-                    <li class="mb-2">
-                        <a href="#about" class="text-decoration-none text-white-50 hover-white">
-                            <i class="fas fa-info-circle me-2"></i> About Us
-                        </a>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
 
-            <div class="col-md-6 mb-4">
-                <h5 class="text-danger mb-3 border-bottom pb-2">Contact Information</h5>
-                <ul class="list-unstyled">
-                    <li class="mb-3">
-                        <i class="fas fa-map-marker-alt text-danger me-2"></i>
-                        600 Upper Changi Road East, Singapore 486150
-                    </li>
-                    <li class="mb-3">
-                        <i class="fas fa-phone-alt text-danger me-2"></i>
-                        +65 1234 5678
-                    </li>
-                    <li class="mb-3">
-                        <i class="fas fa-envelope text-danger me-2"></i>
-                        <a href="mailto:contact@example.com" class="text-decoration-none text-white-50 hover-white">contact@example.com</a>
-                    </li>
-                </ul>
-
-                <h5 class="text-danger mt-4 mb-3 border-bottom pb-2">Connect With Us</h5>
-                <div class="social-icons">
-                    <a href="https://www.facebook.com/nanyangpoly" class="text-white me-3" target="_blank" rel="noopener noreferrer">
-                        <i class="fab fa-facebook-f fs-5 hover-red"></i>
-                    </a>
-                    <a href="https://www.instagram.com/nanyangpoly/" class="text-white me-3" target="_blank" rel="noopener noreferrer">
-                        <i class="fab fa-instagram fs-5 hover-red"></i>
-                    </a>
-                    <a href="https://twitter.com/nanyangpoly" class="text-white me-3" target="_blank" rel="noopener noreferrer">
-                        <i class="fab fa-twitter fs-5 hover-red"></i>
-                    </a>
+            <div class="row mt-4 pt-3 border-top border-secondary">
+                <div class="col-12 text-center">
+                    <p class="mb-0 text-white-50 small">© 2025 Nanyang Polytechnic. All Rights Reserved.</p>
                 </div>
             </div>
         </div>
-
-        <div class="row mt-4 pt-3 border-top border-secondary">
-            <div class="col-12 text-center">
-                <p class="mb-0 text-white-50 small">© <script>document.write(new Date().getFullYear())</script> Nanyang Polytechnic. All Rights Reserved.</p>
-            </div>
-        </div>
-    </div>
-</footer>
+    </footer>
 </body>
 </html>
