--- a/ContactUsPage/CSS/ContactUs.html
+++ b/ContactUsPage/CSS/ContactUs.html
@@ -35,6 +35,63 @@
         <p><span class="icon"></span> Email: Lionel@mymail.nyp.edu.sg</p>
     </div>
 </div>
+<div class="schedule">
+<h2>Executive Committee</h2>
+    <table class="exec-table">
+    <thead>
+        <tr>
+            <th>Position</th>
+            <th>Name</th>
+            <th>Contact</th>
+            <th>Email</th>
+            <th>Availability</th>
+        </tr>
+    </thead>
+        <tbody>
+        <tr>
+            <td>President</td>
+            <td>Xie Ming En</td>
+            <td>3693 8821</td>
+            <td>xiexiexiemingen@mymail.nyp.edu.sg</td>
+            <td>Mon-Fri after 3pm</td>
+        </tr>
+        <tr>
+            <td>Vice President</td>
+            <td>Melvin Lim</td>
+            <td>8234 5678</td>
+            <td>melvin_Lim@mymail.nyp.edu.sg</td>
+            <td>Tue, Thu after 4pm</td>
+        </tr>
+        <tr>
+            <td>Secretary</td>
+            <td>Matthias Chiam</td>
+            <td>9345 6789</td>
+            <td>MatthiasChiam@mymail.nyp.edu.sg</td>
+            <td>Wed, Fri after 3pm</td>
+        </tr>
+        <tr>
+            <td>Treasurer</td>
+            <td>Katarina Oh</td>
+            <td>8456 7890</td>
+            <td>KatarinaOh@mymail.nyp.edu.sg</td>
+            <td>Mon, Wed after 4pm</td>
+        </tr>
+        <tr>
+            <td>Training Captain</td>
+            <td>kurt Tey</td>
+            <td>9567 8901</td>
+            <td>Kurt tey@mymail.nyp.edu.sg</td>
+            <td>All training sessions</td>
+        </tr>
+    </tbody>
+    </table>
+</div>
+
+<div class="schedule">
+            <h2>Training Venue</h2>
+            <p><span class="icon"></span> <strong>Location:</strong> Sports Hall 2, School Sports Complex</p>
+            <p><span class="icon"></span> <strong>Notes:</strong> Please bring your own racket. Shuttlecocks will be provided.</p>
+    </div>
 
 </body>
 <footer class="bg-dark text-white pt-4 pb-3">
