--- a/ContactUsPage/CSS/ContactUs.html
+++ b/ContactUsPage/CSS/ContactUs.html
@@ -17,37 +17,37 @@
     <div class="container">
         <h1 class="page-title">Contact Badminton CCA</h1>
         
-<div class="contact-sections">
-    <div class="contact-card">
-    <h2>General Enquiries</h2>
+<div class="contact-card">
+    <h2>Got Questions?</h2>
     <div class="contact-info">
-        <p><span class="icon"></span> Phone: +65 1234 1234</p>
-        <p><span class="icon"></span> Email: contactNYP@nyp.edu.sg</p>
-        <p><span class="icon"></span> CCA Office: Sports Complex, Room 102</p>
+        <p><i class="fas fa-phone me-2"></i> Call us: +65 1234 1234</p>
+        <p><i class="fas fa-envelope me-2"></i> Email: contactNYP@nyp.edu.sg</p>
+        <p><i class="fas fa-map-marker-alt me-2"></i> Find us: Sports Complex, Room 102 (look for the shuttlecock stickers!)</p>
     </div>  
 </div>
 
 <div class="contact-card">
-    <h2>Coach Information</h2>
+    <h2>Our Awesome Coach</h2>
     <div class="contact-info">
-        <p><span class="icon"></span> Coach: Mr. Lionel</p>
-        <p><span class="icon"></span> Mobile: +65 9876 5432</p>
-        <p><span class="icon"></span> Email: Lionel@mymail.nyp.edu.sg</p>
+        <p><i class="fas fa-user me-2"></i> Coach Lionel - 30 years coaching experience</p>
+        <p><i class="fas fa-mobile-alt me-2"></i> Mobile Number: +65 9876 5432</p>
+        <p><i class="fas fa-envelope me-2"></i> Email : Lionel@mymail.nyp.edu.sg</p>
     </div>
 </div>
 <div class="schedule">
-<h2>Executive Committee</h2>
+    <h2>Meet Our Team</h2>
+    <p class="mb-3">These are the people who make our CCA awesome!</p>
     <table class="exec-table">
-    <thead>
-        <tr>
-            <th>Position</th>
-            <th>Name</th>
-            <th>Contact</th>
-            <th>Email</th>
-            <th>Availability</th>
-        </tr>
-    </thead>
-        <tbody>
+<thead>
+    <tr>
+        <th>Position</th>
+        <th>Name</th>
+        <th>Contact</th>
+        <th>Email</th>
+        <th>Availability</th>
+    </tr>
+</thead>
+    <tbody>
         <tr>
             <td>President</td>
             <td>Xie Ming En</td>
@@ -84,89 +84,90 @@
             <td>All training sessions</td>
         </tr>
     </tbody>
-    </table>
+</table>
 </div>
 
 <div class="schedule">
-            <h2>Training Venue</h2>
-            <p><span class="icon"></span> <strong>Location:</strong> Sports Hall 2, School Sports Complex</p>
-            <p><span class="icon"></span> <strong>Notes:</strong> Please bring your own racket. Shuttlecocks will be provided.</p>
-    </div>
+    <h2>Training Venue</h2>
+    <p><strong>Home Court:</strong> Sports Hall 2</p>
+    <p><strong>Quick Tip:</strong> Bring your own racket</p>
+    <p class="mt-2"></i> <strong>Training Days:</strong> Mon/Wed 4-6pm, Fri 3-6pm</p>
+</div>
 
 </body>
 <footer class="bg-dark text-white pt-4 pb-3">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 mb-4">
-                <h5 class="text-danger mb-3 border-bottom pb-2">Find Your Way Around</h5>
-                <ul class="list-unstyled">
-                    <li class="mb-2">
-                        <a href="#events" class="text-decoration-none text-white-50 hover-white">
-                            <i class="fas fa-calendar-alt me-2"></i> Events
-                        </a>
-                    </li>
-                    <li class="mb-2">
-                        <a href="#registration" class="text-decoration-none text-white-50 hover-white">
-                            <i class="fas fa-user-edit me-2"></i> Registration
-                        </a>
-                    </li>
-                    <li class="mb-2">
-                        <a href="#contact" class="text-decoration-none text-white-50 hover-white">
-                            <i class="fas fa-envelope me-2"></i> Contact Us
-                        </a>
-                    </li>
-                    <li class="mb-2">
-                        <a href="#about" class="text-decoration-none text-white-50 hover-white">
-                            <i class="fas fa-info-circle me-2"></i> About Us
-                        </a>
-                    </li>
-                </ul>
-            </div>
+<div class="container">
+    <div class="row">
+    <div class="col-md-6 mb-4">
+        <h5 class="text-danger mb-3 border-bottom pb-2">Find Your Way Around</h5>
+        <ul class="list-unstyled">
+            <li class="mb-2">
+                <a href="#events" class="text-decoration-none text-white-50 hover-white">
+                    <i class="fas fa-calendar-alt me-2"></i> Events
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#registration" class="text-decoration-none text-white-50 hover-white">
+                    <i class="fas fa-user-edit me-2"></i> Registration
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#contact" class="text-decoration-none text-white-50 hover-white">
+                    <i class="fas fa-envelope me-2"></i> Contact Us
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#about" class="text-decoration-none text-white-50 hover-white">
+                    <i class="fas fa-info-circle me-2"></i> About Us
+                </a>
+            </li>
+        </ul>
+    </div>
 
-            <div class="col-md-6 mb-4">
-                <h5 class="text-danger mb-3 border-bottom pb-2">Information</h5>
-                <ul class="list-unstyled">
-                    <li class="mb-3">
-                        <i class="fas fa-map-marker-alt text-danger me-2"></i>
-                        Come visit us at:<br>
-                        600 Upper Changi Road East<br>
-                        Singapore 486150
-                    </li>
-                    <li class="mb-3">
-                        <i class="fas fa-phone-alt text-danger me-2"></i>
-                        Mobile Number: <br>
-                        +65 1234 5678
-                    </li>
-                    <li class="mb-3">
-                        <i class="fas fa-envelope text-danger me-2"></i>
-                        Drop us an email:<br>
-                        <a href="mailto:contact@example.com" class="text-decoration-none text-white-50 hover-white">contact@example.com</a>
-                    </li>
-                </ul>
+    <div class="col-md-6 mb-4">
+        <h5 class="text-danger mb-3 border-bottom pb-2">Information</h5>
+        <ul class="list-unstyled">
+            <li class="mb-3">
+                <i class="fas fa-map-marker-alt text-danger me-2"></i>
+                Come visit us at:<br>
+                600 Upper Changi Road East<br>
+                Singapore 486150
+            </li>
+            <li class="mb-3">
+                <i class="fas fa-phone-alt text-danger me-2"></i>
+                Mobile Number: <br>
+                +65 1234 5678
+            </li>
+            <li class="mb-3">
+                <i class="fas fa-envelope text-danger me-2"></i>
+                Drop us an email:<br>
+                <a href="mailto:contact@example.com" class="text-decoration-none text-white-50 hover-white">contact@example.com</a>
+            </li>
+        </ul>
 
-                <h5 class="text-danger mt-4 mb-3 border-bottom pb-2">Follow Our Journey</h5>
-                <div class="social-icons">
-                    <a href="https://www.facebook.com/nanyangpoly" class="text-white me-3" target="_blank" rel="noopener noreferrer" title="Our Facebook">
-                        <i class="fab fa-facebook-f fs-5 hover-red"></i>
-                    </a>
-                    <a href="https://www.instagram.com/nanyangpoly/" class="text-white me-3" target="_blank" rel="noopener noreferrer" title="Our Instagram">
-                        <i class="fab fa-instagram fs-5 hover-red"></i>
-                    </a>
-                    <a href="https://twitter.com/nanyangpoly" class="text-white me-3" target="_blank" rel="noopener noreferrer" title="Our Twitter">
-                        <i class="fab fa-twitter fs-5 hover-red"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-
-        <div class="row mt-4 pt-3 border-top border-secondary">
-            <div class="col-12 text-center">
-                <p class="mb-0 text-white-50 small">
-                    © 2025 Nanyang Polytechnic. All rights reserved.<br>
-                    <small>Made by Matthias and Lionel</small>
-                </p>
-            </div>
+        <h5 class="text-danger mt-4 mb-3 border-bottom pb-2">Follow Our Journey</h5>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/nanyangpoly" class="text-white me-3" target="_blank" rel="noopener noreferrer" title="Our Facebook">
+                <i class="fab fa-facebook-f fs-5 hover-red"></i>
+            </a>
+            <a href="https://www.instagram.com/nanyangpoly/" class="text-white me-3" target="_blank" rel="noopener noreferrer" title="Our Instagram">
+                <i class="fab fa-instagram fs-5 hover-red"></i>
+            </a>
+            <a href="https://twitter.com/nanyangpoly" class="text-white me-3" target="_blank" rel="noopener noreferrer" title="Our Twitter">
+                <i class="fab fa-twitter fs-5 hover-red"></i>
+            </a>
         </div>
     </div>
+</div>
+
+    <div class="row mt-4 pt-3 border-top border-secondary">
+        <div class="col-12 text-center">
+            <p class="mb-0 text-white-50 small">
+                © 2025 Nanyang Polytechnic. All rights reserved.<br>
+                <small>Made by Matthias and Lionel</small>
+            </p>
+        </div>
+    </div>
+</div>
 </footer>
 </html>
