--- a/ContactUsPage/CSS/ContactUs.html
+++ b/ContactUsPage/CSS/ContactUs.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/ContactUs.css">
+    <link rel="stylesheet" href="/ContactUsPage/CSS/ContactUs.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>ContactUs</title>
 </head>
 
 <body>
-    <div class="breadcrumb">
-        <a href="/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html">Home</a> &gt; <span>Contact Us</span>
-    </div>
 
-    <div class="container">
-        <h1 class="page-title">Contact Badminton CCA</h1>
-        
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html">Home</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
+    </ol>
+</nav>
+
+<div class="container">
+<h1 class="page-title">Contact Badminton CCA</h1>
+            
 <div class="contact-card">
     <h2>Got Questions?</h2>
     <div class="contact-info">
@@ -160,14 +164,14 @@
     </div>
 </div>
 
-    <div class="row mt-4 pt-3 border-top border-secondary">
-        <div class="col-12 text-center">
-            <p class="mb-0 text-white-50 small">
-                © 2025 Nanyang Polytechnic. All rights reserved.<br>
-                <small>Made by Matthias and Lionel</small>
-            </p>
-        </div>
+<div class="row mt-4 pt-3 border-top border-secondary">
+    <div class="col-12 text-center">
+        <p class="mb-0 text-white-50 small">
+            © 2025 Nanyang Polytechnic. All rights reserved.<br>
+            <small>Made by Matthias and Lionel</small>
+        </p>
     </div>
+</div>
 </div>
 </footer>
 </html>
