--- a/ContactUsPage/CSS/ContactUs.html
+++ b/ContactUsPage/CSS/ContactUs.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>ContactUs</title>
 </head>
-
+<header>
+        <a href="/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html" class="logo-link">
+            <img src="../../Pictures/NavBar/NYP-logo.png" class="logo" alt="NYP Logo">
+        </a>
+        <div class="nav-menu">
+            <p class="a">Events</p>
+            <p class="a">Registration</p>
+            <p class="a">Contact Us</p>
+            <p class="a">About Us</p>
+        </div>
+    </header>
 <body>
 
 <nav aria-label="breadcrumb">
@@ -31,7 +41,7 @@
 </div>
 
 <div class="contact-card">
-    <h2>Our Awesome Coach</h2>
+    <h2>Our Coach</h2>
     <div class="contact-info">
         <p><i class="fas fa-user me-2"></i> Coach Lionel - 30 years coaching experience</p>
         <p><i class="fas fa-mobile-alt me-2"></i> Mobile Number: +65 9876 5432</p>
@@ -75,9 +85,9 @@
         </tr>
         <tr>
             <td>Treasurer</td>
-            <td>Katarina Oh</td>
+            <td>Katarina aw</td>
             <td>8456 7890</td>
-            <td>KatarinaOh@mymail.nyp.edu.sg</td>
+            <td>Katarinaaw@mymail.nyp.edu.sg</td>
             <td>Mon, Wed after 4pm</td>
         </tr>
         <tr>
@@ -92,13 +102,44 @@
 </div>
 
 <div class="schedule">
-    <h2>Training Venue</h2>
-    <p><strong>Home Court:</strong> Sports Hall 2</p>
-    <p><strong>Quick Tip:</strong> Bring your own racket</p>
-    <p class="mt-2"></i> <strong>Training Days:</strong> Mon/Wed 4-6pm, Fri 3-6pm</p>
+  <h2>Training Venue</h2>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="map-container ratio ratio-16x9 mb-3">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.71531799958!2d103.92978731575385!3d1.3775819999999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da3ccd2e1e4eaf%3A0x4e2a5a5b0a4c8c1e!2sNanyang%20Polytechnic!5e0!3m2!1sen!2ssg!4v1620000000000!5m2!1sen!2ssg" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade"
+                title="NYP Campus Map">
+        </iframe>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <p><strong><i class="fas fa-map-marker-alt text-danger me-2"></i> Location:</strong></p>
+      <p>Sports Hall 2<br>
+      Nanyang Polytechnic<br>
+      180 Ang Mo Kio Avenue 8<br>
+      Singapore 569830</p>
+      
+      <p><strong><i class="fas fa-clock text-danger me-2"></i> Training Schedule:</strong></p>
+      <ul class="list-unstyled">
+        <li><i class="fas fa-check-circle text-success me-2"></i> Monday: 4:00pm - 6:30pm</li>
+        <li><i class="fas fa-check-circle text-success me-2"></i> Wednesday: 4:00pm - 6:30pm</li>
+        <li><i class="fas fa-check-circle text-success me-2"></i> Friday: 3:00pm - 6:00pm</li>
+      </ul>
+      
+      <div class="alert alert-warning mt-3">
+        <i class="fas fa-exclamation-circle me-2"></i> <strong>Important:</strong> Please bring your:
+        <ul class="mt-2 mb-1">
+          <li>Badminton racket</li>
+          <li>Sports shoes</li>
+          <li>Water bottle</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
 
-</body>
 <footer class="bg-dark text-white pt-4 pb-3">
 <div class="container">
     <div class="row">
