--- a/ContactUsPage/CSS/ContactUs.html
+++ b/ContactUsPage/CSS/ContactUs.html
@@ -95,7 +95,7 @@
                 </tr>
                 <tr>
                     <td>Training Captain</td>
-                    <td>kurt Tey</td>
+                    <td>Kurt Tey</td>
                     <td>9567 8901</td>
                     <td>Kurt tey@mymail.nyp.edu.sg</td>
                     <td>All training sessions</td>
@@ -191,7 +191,7 @@
             <li class="mb-3">
                 <i class="fas fa-envelope text-danger me-2"></i>
                 Drop us an email:<br>
-                <a href="mailto:contact@example.com" class="text-decoration-none text-white-50 hover-white">contact@example.com</a>
+                <a href="mailto:contact@example.com" class="text-decoration-none text-white-50 hover-white">contactNYP@nyp.edu.sg</a>
             </li>
         </ul>
 
