--- a/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
+++ b/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html
@@ -81,7 +81,7 @@
             <li class="mb-3">
                 <i class="fas fa-envelope text-danger me-2"></i>
                 Drop us an email:<br>
-                <a href="mailto:contact@example.com" class="text-decoration-none text-white-50 hover-white">contact@example.com</a>
+                <a href="mailto:contact@example.com" class="text-decoration-none text-white-50 hover-white">contactNYP@nyp.edu.sg</a>
             </li>
         </ul>
 
