--- a/signuppage/signuppage.html
+++ b/signuppage/signuppage.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/signuppage.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/signuppage/CSS/Signup.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <title>SignUpPage</title>
 </head>
+
+<body>
+<header>
+    <a href="/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html" class="logo-link">
+        <img src="../../Pictures/NavBar/NYP-logo.png" class="logo" alt="NYP Logo">
+    </a>
+    <div class="nav-menu">
+        <p class="a">Events</p>
+        <p class="a">Registration</p>
+        <p class="a">Contact Us</p>
+        <p class="a">About Us</p>
+    </div>
+</header>
+
 <body>
     
 </body>
@@ -56,7 +71,7 @@
             <li class="mb-3">
                 <i class="fas fa-envelope text-danger me-2"></i>
                 Drop us an email:<br>
-                <a href="mailto:contact@example.com" class="text-decoration-none text-white-50 hover-white">contact@example.com</a>
+                <a href="mailto:contact@example.com" class="text-decoration-none text-white-50 hover-white">contactNYP@nyp.edu.sg</a>
             </li>
         </ul>
 
