--- a/ContactUsPage/CSS/ContactUs.html
+++ b/ContactUsPage/CSS/ContactUs.html
@@ -5,20 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/ContactUsPage/CSS/ContactUs.css">
+    <link rel="stylesheet" href="../../Year-1---Assignment-1-CCA-Website-/mainPage/CSS/Header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>ContactUs</title>
 </head>
 
 <body>
-<header>
-    <a href="/Year-1---Assignment-1-CCA-Website-/mainPage/mainpage2.html" class="logo-link">
-        <img src="../../Pictures/NavBar/NYP-logo.png" class="logo" alt="NYP Logo">
-    </a>
-    <div class="nav-menu">
-        <p class="a">Events</p>
-        <p class="a">Registration</p>
-        <p class="a">Contact Us</p>
-        <p class="a">About Us</p>
+    <header>
+    <div class="header-container">
+        <a href="../mainPage/mainpage2.html" class="logo-link">
+            <img src="../../Pictures/NavBar/NYP-logo.png" class="logo" alt="NYP Logo">
+        </a>
+        <div class="nav-menu">
+            <p class="a">Events</p>
+            <p class="a">Registration</p>
+            <p class="a">Contact Us</p>
+            <p class="a">About Us</p>
+        </div>
     </div>
 </header>
 
@@ -108,16 +111,6 @@
         <h2>Training Venue</h2>
         <div class="row">
             <div class="col-md-6">
-            <div class="map-container ratio ratio-16x9 mb-3">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.71531799958!2d103.92978731575385!3d1.3775819999999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da3ccd2e1e4eaf%3A0x4e2a5a5b0a4c8c1e!2sNanyang%20Polytechnic!5e0!3m2!1sen!2ssg!4v1620000000000!5m2!1sen!2ssg" 
-                        allowfullscreen="" 
-                        loading="lazy" 
-                        referrerpolicy="no-referrer-when-downgrade"
-                        title="NYP Campus Map">
-                </iframe>
-                </div>
-            </div>
-            <div class="col-md-6">
                 <p><strong><i class="fas fa-map-marker-alt text-danger me-2"></i> Location:</strong></p>
                 <p>Sports Hall 2<br>
                 Nanyang Polytechnic<br>
@@ -131,7 +124,7 @@
                     <li><i class="fas fa-check-circle text-success me-2"></i> Friday: 3:00pm - 6:00pm</li>
                 </ul>
                 
-                <div class="alert alert-warning mt-3">
+                <div class="alert alert-warning mt-3" style="position: static !important;">
                     <i class="fas fa-exclamation-circle me-2"></i> <strong>Important:</strong> Please bring your:
                     <ul class="mt-2 mb-1">
                         <li>Badminton racket</li>
